src/components/Layout.less
@import "~semantic-ui-less/semantic.less";

html, body {
  background: #C6FFDD;
  background: -webkit-linear-gradient(to bottom, #f7797d, #FBD786, #C6FFDD);
  background: linear-gradient(to bottom, #f7797d, #FBD786, #C6FFDD);
  background-attachment: fixed;
  font-weight: 300;
  font-size: 16px;
}

#___gatsby {
  padding: 2em 0;

  code[class*="language-"],
  pre[class*="language-"] {
    font-family: 'Fira Mono', monospace;
    font-weight: 400;
    tab-size: 2;

    &::after, &::before {
      display: none;
    }
  }

  :not(pre) > code[class*="language-"] {
    padding: 0 0.2em;
  }

  .remark-draw, figure {
    text-align: center;
    margin: 3em 0;
  }
}

.gatsby-resp-image-figcaption {
  font-style: italic;
  margin-top: 0.5rem;
}

@media only screen and (max-width: 767px) {
  [class*="mobile hidden"],
  [class*="tablet only"]:not(.mobile),
  [class*="computer only"]:not(.mobile),
  [class*="large screen only"]:not(.mobile),
  [class*="widescreen only"]:not(.mobile),
  [class*="or lower hidden"] {
    display: none !important;
  }
}

@media only screen and (min-width: 768px) and (max-width: 991px) {
  [class*="mobile only"]:not(.tablet),
  [class*="tablet hidden"],
  [class*="computer only"]:not(.tablet),
  [class*="large screen only"]:not(.tablet),
  [class*="widescreen only"]:not(.tablet),
  [class*="or lower hidden"]:not(.mobile) {
    display: none !important;
  }
}

@media only screen and (min-width: 992px) and (max-width: 1199px) {
  [class*="mobile only"]:not(.computer),
  [class*="tablet only"]:not(.computer),
  [class*="computer hidden"],
  [class*="large screen only"]:not(.computer),
  [class*="widescreen only"]:not(.computer),
  [class*="or lower hidden"]:not(.tablet):not(.mobile) {
    display: none !important;
  }
}

@media only screen and (min-width: 1200px) and (max-width: 1919px) {
  [class*="mobile only"]:not([class*="large screen"]),
  [class*="tablet only"]:not([class*="large screen"]),
  [class*="computer only"]:not([class*="large screen"]),
  [class*="large screen hidden"],
  [class*="widescreen only"]:not([class*="large screen"]),
  [class*="or lower hidden"]:not(.computer):not(.tablet):not(.mobile) {
    display: none !important;
  }
}

@media only screen and (min-width: 1920px) {
  [class*="mobile only"]:not([class*="widescreen"]),
  [class*="tablet only"]:not([class*="widescreen"]),
  [class*="computer only"]:not([class*="widescreen"]),
  [class*="large screen only"]:not([class*="widescreen"]),
  [class*="widescreen hidden"],
  [class*="widescreen or lower hidden"] {
    display: none !important;
  }
}

